--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
 
 <body class="bg-white dark:bg-slate-800 text-slate-800 dark:text-white">
     <!-- Menú principal -->
+
     <nav
-         class="z-20 bg-white dark:bg-slate-800 sticky w-full md:w-auto border-b md:border-none shadow-lg md:shadow-none dark:border-none">
+         class="z-20 bg-white dark:bg-slate-800 fixed md:static w-full md:w-auto border-b md:border-none shadow-lg md:shadow-none dark:border-none">
         <div class="p-6 container mx-auto">
             <div class="flex items-center justify-between">
                 <!-- Logo -->
@@ -27,7 +28,6 @@
                         <span class="text-3xl ml-3"><span class="font-bold">Firefox</span> Browser</span>
                     </a>
                 </div>
-
                 <!-- Cuerpo de menú-->
                 <div>
                     <!-- Botón responsive-->
@@ -62,11 +62,117 @@
                             <a href=""
                                class="block px-6 py-2 rounded text-center text-white text-lg font-semibold transition-all duration-300 ease-in-out bg-blue-500 hover:bg-blue-600">Descargar</a>
                         </div>
-                    </div>
-                </div>
+                    </div> <!-- fin cuerpo de enlaces-->
+                </div> <!-- fin cuerpo menu-->
+            </div> <!-- fin contenedor flex-->
+        </div> <!-- Fin contenedor menu-->
+    </nav> <!-- Fin menu principal-->
+
+    <!-- Hero -->
+    <div class="container mx-auto h-screen flex px-5 md:py-40 md:flex-row flex-col items-center relative pt-40">
+        <!-- cuerpo de texto-->
+        <div
+             class="lg:flex-grow md:w-1/2 lg:pr-32 md:pr-16 md:pb-0 flex flex-col md:items-start md:text-left items-center text-center pb-5">
+            <!-- texto-->
+            <h1 class="lg:text-6xl text-5xl mb-4 font-medium">Lorem ipsum dolor sit amet consectetur.</h1>
+            <p class="mb-8 leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+                quam culpa accusamus harum, ipsa dolores?</p>
+            <!-- botones-->
+            <div class="flex xl:flex-row md:flex-col flex-wrap w-full justify-center xl:justify-start gap-10 md:gap-0">
+                <button class="btn-download">
+                    <img src="public/img/logo_windows.png"
+                         alt="descarga windows"
+                         class="w-10 h-10" />
+                    <span class="ml-4 flex items-start flex-col leading-none text-white">
+                        <span class="text-xs uppercase">instalar en</span>
+                        <span class="font-medium text-xl">Windows</span></span>
+                </button>
+                <button class="btn-download xl:ml-4 md:mt-4 mt-0 xl:mt-0">
+                    <img src="public/img/apple-logo.png"
+                         alt="descarga windows"
+                         class="w-10 h-10" />
+                    <span class="ml-4 flex items-start flex-col leading-none text-white">
+                        <span class="text-xs uppercase">instalar en</span>
+                        <span class="font-medium text-xl">Mac OS</span></span>
+                </button>
             </div>
         </div>
-    </nav>
+        <!-- cuerpo imagen -->
+        <div class="hidden md:block lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+            <img src="public/img/image_hero1.png"
+                 alt="Hero Browser"
+                 class="object-cover object-center rounded" />
+        </div>
+        <!-- svg de fondo-->
+        <img src="public/img/image_hero2.svg"
+             alt="fondo svg Hero"
+             class="hidden md:block absolute right-0 xl:w-1/2 lg:w-[60%] md:w-[55%] -z-10">
+    </div>
+
+    <!-- Titulo -->
+    <div class="container mx-auto py-28 w-10/12 md:w-8/12">
+        <h1 class="sm:text-5xl text-4xl mb-4 font-medium text-center">Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Dicta cumque eius dolor accusantium rem inventore, facere qui nesciunt quisquam sequi.
+        </h1>
+    </div>
+
+    <!-- Cuerpo de la pagina -->
+    <main>
+        <div class="container mx-auto flex px-8 lg:py-20 py-14 md:flex-row flex-col items-center">
+            <!-- texto-->
+            <div class="lg:flex-grow md:w-1/2 lg:pr-24 flex flex-col items-start text-left mb-16 md:mb-0">
+                <h1 class="sm:text-4xl text-3xl mb-4 font-medium">Lorem ipsum dolor sit amet, consectetur
+                    adipisicing.</h1>
+                <p class="mb-8 leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facilis quibusdam natus aperiam tenetur
+                    fugit consectetur nemo fuga rerum libero, ab doloremque aliquam, ipsum perferendis modi debitis,
+                    ut eum error dolorem.</p>
+            </div>
+            <!--imagen-->
+            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+                <img src="public/img/image_content1.svg"
+                     alt="contenido 1"
+                     class="object-cover object-center rounded shadow-xl" />
+            </div>
+        </div>
+
+
+        <div class="container mx-auto flex px-8 lg:py-20 py-14 md:flex-row flex-col items-center">
+            <!-- texto-->
+            <div class="lg:flex-grow md:w-1/2 md:pl-16 flex flex-col items-start text-left mb-16 md:mb-0">
+                <h1 class="sm:text-4xl text-3xl mb-4 font-medium">Lorem ipsum dolor sit amet, consectetur
+                    adipisicing.</h1>
+                <p class="mb-8 leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facilis quibusdam natus aperiam tenetur
+                    fugit consectetur nemo fuga rerum libero, ab doloremque aliquam, ipsum perferendis modi debitis,
+                    ut eum error dolorem.</p>
+            </div>
+            <!--imagen-->
+            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 md:order-first">
+                <img src="public/img/image_content2.svg"
+                     alt="contenido 1"
+                     class="object-cover object-center rounded" />
+            </div>
+        </div>
+
+        <div class="container mx-auto flex px-8 lg:py-20 py-14 md:flex-row flex-col items-center">
+            <!-- texto-->
+            <div class="lg:flex-grow md:w-1/2 lg:pr-24 flex flex-col items-start text-left mb-16 md:mb-0">
+                <h1 class="sm:text-4xl text-3xl mb-4 font-medium">Lorem ipsum dolor sit amet, consectetur
+                    adipisicing.</h1>
+                <p class="mb-8 leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Facilis quibusdam natus aperiam tenetur
+                    fugit consectetur nemo fuga rerum libero, ab doloremque aliquam, ipsum perferendis modi debitis,
+                    ut eum error dolorem.</p>
+            </div>
+            <!--imagen-->
+            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+                <img src="public/img/image_content3.png"
+                     alt="contenido 1"
+                     class="object-cover object-center rounded shadow-xl" />
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
