--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,28 @@
                                href="">Componentes</a>
                             <a class="tracking-wide cursor-pointer px-3 py-2 hover:bg-pink-500 rounded hover:text-white font-semibold text-lg transition-all duration-300 ease-in-out"
                                href="">Idiomas</a>
+
+                            <button id="theme-toggle"
+                                    type="button"
+                                    class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+                                <svg id="theme-toggle-dark-icon"
+                                     class="hidden w-5 h-5"
+                                     fill="currentColor"
+                                     viewBox="0 0 20 20"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
+                                </svg>
+                                <svg id="theme-toggle-light-icon"
+                                     class="hidden w-5 h-5" 
+                                     fill="currentColor"
+                                     viewBox="0 0 20 20"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+                                          fill-rule="evenodd"
+                                          clip-rule="evenodd"></path>
+                                </svg>
+                            </button>
+
                         </div>
                         <!-- Botón -->
                         <div
@@ -69,7 +91,7 @@
     </nav> <!-- Fin menu principal-->
 
     <!-- Hero -->
-    <div class="container mx-auto h-screen flex px-5 md:py-40 md:flex-row flex-col items-center relative pt-40">
+    <main class="container mx-auto h-screen flex px-5 md:py-40 md:flex-row flex-col items-center relative pt-40">
         <!-- cuerpo de texto-->
         <div
              class="lg:flex-grow md:w-1/2 lg:pr-32 md:pr-16 md:pb-0 flex flex-col md:items-start md:text-left items-center text-center pb-5">
@@ -107,17 +129,17 @@
         <img src="public/img/image_hero2.svg"
              alt="fondo svg Hero"
              class="hidden md:block absolute right-0 xl:w-1/2 lg:w-[60%] md:w-[55%] -z-10">
-    </div>
+    </main>
 
     <!-- Titulo -->
-    <div class="container mx-auto py-28 w-10/12 md:w-8/12">
+    <section class="container mx-auto py-28 w-10/12 md:w-8/12">
         <h1 class="sm:text-5xl text-4xl mb-4 font-medium text-center">Lorem ipsum, dolor sit amet consectetur
             adipisicing elit. Dicta cumque eius dolor accusantium rem inventore, facere qui nesciunt quisquam sequi.
         </h1>
-    </div>
+    </section>
 
     <!-- Cuerpo de la pagina -->
-    <main>
+    <section>
         <div class="container mx-auto flex px-8 lg:py-20 py-14 md:flex-row flex-col items-center">
             <!-- texto-->
             <div class="lg:flex-grow md:w-1/2 lg:pr-24 flex flex-col items-start text-left mb-16 md:mb-0">
@@ -172,7 +194,217 @@
                      class="object-cover object-center rounded shadow-xl" />
             </div>
         </div>
-    </main>
+    </section>
+
+    <!-- Sección de información -->
+    <section class="">
+        <h1 class="md:text-6xl text-5xl text-center font-medium md:mt-40 md:mb-80 my-28">
+            Lorem ipsum consectetur adipisicing!
+        </h1>
+        <!-- image + 3 columnas-->
+        <div class="flex px-5 pb-24 items-center flex-col">
+            <!-- imagen -->
+            <div class="relative w-full flex justify-center items-end">
+                <img src="public/img/image_info1.png"
+                     alt="información 1"
+                     class="w-4/5 md:w-8/12 h-1/5 mb-10 object-cover object-center rounded" />
+                <svg xmlns="http://www.w3.org/2000/svg"
+                     viewBox="0 0 1242 532"
+                     class="absolute -z-10">
+                    <path fill="none"
+                          stroke="#ffba2d"
+                          stroke-width="2"
+                          d="M1198.8 232.3c4.7 3 6.1 9.1 3.2 13.8l-.2.3c-2.8 4.5-1.3 10.4 3.2 13.2 4.6 2.8 10.5 1.5 13.4-2.9l.2-.3c3.1-4.7 9.4-6 14.2-3.1 4.8 3 6.3 9.3 3.3 14.1-8.9 14.1-27.8 18.3-42 9.5-14.3-8.8-18.7-27.4-9.8-41.4 3-4.7 9.3-6.2 14.1-3.3l.2.1h.2z">
+                    </path>
+                    <linearGradient id="a2"
+                                    x1="1046.5737"
+                                    x2="1180.3937"
+                                    y1="142.2743"
+                                    y2="50.0583"
+                                    gradientTransform="matrix(1 0 0 -1 0 519.0001)"
+                                    gradientUnits="userSpaceOnUse">
+                        <stop offset="0"
+                              stop-color="#ffda65"></stop>
+                        <stop offset="1"
+                              stop-color="#ff9741"></stop>
+                    </linearGradient>
+                    <circle cx="1096.9"
+                            cy="411.4"
+                            r="120.5"
+                            fill="url(#a2)"></circle>
+                    <linearGradient id="b2"
+                                    x1="-83.934"
+                                    x2="122.2983"
+                                    y1="-272.8492"
+                                    y2="-30.4322"
+                                    gradientTransform="matrix(.766 -.6428 -.6428 -.766 175.4476 172.2943)"
+                                    gradientUnits="userSpaceOnUse">
+                        <stop offset="0"
+                              stop-color="#c857f1"></stop>
+                        <stop offset="1"
+                              stop-color="#2ebffc"></stop>
+                    </linearGradient>
+                    <path fill="url(#b2)"
+                          d="M45.1 300.6l323-271C421.4-15.3 501-8.3 545.8 45.1l.2.2c44.8 53.4 37.8 132.9-15.5 177.7l-323 271C154 538.7 74.4 531.8 29.7 478.4l-.2-.2c-44.8-53.3-37.8-132.9 15.6-177.6z">
+                    </path>
+                    <path fill="none"
+                          stroke="#ff008b"
+                          stroke-width="2"
+                          d="M130.5 193.8L522.4 58.9c52.9-18.2 110.5 9.9 128.7 62.8h0c18.2 52.9-9.9 110.5-62.8 128.7L196.5 385.3c-52.9 18.2-110.5-9.9-128.7-62.8h0c-18.3-52.9 9.8-110.5 62.7-128.7z">
+                    </path>
+                    <circle cx="811.9"
+                            cy="81.2"
+                            r="12"
+                            fill="#ff008b"></circle>
+                    <linearGradient id="c2"
+                                    x1="733.0189"
+                                    x2="647.999"
+                                    y1="-193.4654"
+                                    y2="-16.5744"
+                                    gradientTransform="scale(1 -1) rotate(32.997 1111.38555617 211.5247949)"
+                                    gradientUnits="userSpaceOnUse">
+                        <stop offset="0"
+                              stop-color="#f80089"></stop>
+                        <stop offset="1"
+                              stop-color="#b833e1"></stop>
+                    </linearGradient>
+                    <path fill="url(#c2)"
+                          d="M678 256.3L981.8 59.1c58.4-37.9 136.5-21.3 174.5 37.1l.1.2c37.9 58.4 21.3 136.5-37.1 174.5L815.5 468.1C757.1 506 679 489.4 641.1 431l-.1-.2c-38-58.4-21.4-136.5 37-174.5z">
+                    </path>
+                </svg>
+            </div>
+            <!-- texto-->
+            <div class="xl:w-2/3 w-full px-8 xl:px-0 mt-5 md:mt-0 flex justify-between lg:flex-row flex-col gap-10">
+                <div>
+                    <h1 class="sm:text-4xl text-3xl mb-4 font-medium">Lorem ipsum dolor sit amet.</h1>
+                    <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur
+                        illum nulla
+                        alias optio officiis unde, esse rerum voluptates, ab sunt quasi in nesciunt neque, asperiores
+                        itaque
+                        aspernatur a! Omnis, eaque!</p>
+                </div>
+
+                <div>
+                    <h1 class="sm:text-4xl text-3xl mb-4 font-medium">Lorem ipsum dolor sit amet.</h1>
+                    <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur
+                        illum nulla
+                        alias optio officiis unde, esse rerum voluptates, ab sunt quasi in nesciunt neque, asperiores
+                        itaque
+                        aspernatur a! Omnis, eaque!</p>
+                </div>
+
+                <div>
+                    <h1 class="sm:text-4xl text-3xl mb-4 font-medium">Lorem ipsum dolor sit amet.</h1>
+                    <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur
+                        illum nulla
+                        alias optio officiis unde, esse rerum voluptates, ab sunt quasi in nesciunt neque, asperiores
+                        itaque
+                        aspernatur a! Omnis, eaque!</p>
+                </div>
+            </div>
+        </div><!-- fin image + 3 columnas-->
+
+        <!-- dos columnas-->
+        <div class="container px-5 pb-24 mx-auto">
+            <div class="flex md:flex-row flex-col flex-wrap -mx-4 -mb-10">
+
+                <div class="md:w-1/2 mb-10 px-4 flex flex-col items-center justify-center">
+                    <div class="h-80 lg:h-96">
+                        <img src="public/img/image_info2.png"
+                             alt=""
+                             class="object-cover object-center w-full h-full">
+                    </div>
+                    <h2 class="text-4xl font-medium mt-6 mb-3">Lorem ipsum dolor sit.</h2>
+                    <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis
+                        earum nulla, reiciendis magni vel voluptatibus? Voluptate mollitia exercitationem minus ipsa ex,
+                        optio
+                        sit accusantium, itaque asperiores, modi autem accusamus perspiciatis.</p>
+                </div>
+
+
+                <div class="md:w-1/2 mb-10 px-4 flex flex-col items-center justify-center">
+                    <div class="h-80 lg:h-96">
+                        <img src="public/img/image_info3.png"
+                             alt=""
+                             class="object-cover object-center w-full h-full">
+                    </div>
+                    <h2 class="text-4xl font-medium mt-6 mb-3">Lorem ipsum dolor sit.</h2>
+                    <p class="leading-relaxed text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Perferendis
+                        earum nulla, reiciendis magni vel voluptatibus? Voluptate mollitia exercitationem minus ipsa ex,
+                        optio
+                        sit accusantium, itaque asperiores, modi autem accusamus perspiciatis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seccion descarga -->
+    <section
+             class="flex px-5 py-24 md:flex-row flex-col items-center justify-center bg-gradient-to-r from-indigo-700 via-purple-700 to-pink-700">
+
+        <div class="hidden md:block lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+            <img src="public/img/firefox.png"
+                 alt=""
+                 class="object-cover object-center w-full rounded">
+        </div>
+
+        <div class="md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+            <h1 class="lg:text-7xl text-6xl mb-8 font-medium text-white">Disponible para móviles</h1>
+
+            <div class="flex md:flex-row flex-col flex-wrap gap-5 justify-center items-center">
+
+                <button class="btn-download">
+                    <img src="public/img/google-play.png"
+                         alt=""
+                         class="w-10 h-10">
+                    <span class="ml-4 flex items-start flex-col leading-none text-white">
+                        <span class="text-xs uppercase">Disponible en</span>
+                        <span class="font-medium text-xl">Google Play</span>
+                    </span>
+                </button>
+
+                <button class="btn-download">
+                    <img src="public/img/apple-logo.png"
+                         alt=""
+                         class="w-10 h-10">
+                    <span class="ml-4 flex items-start flex-col leading-none text-white">
+                        <span class="text-xs">Consiguelo en el</span>
+                        <span class="font-medium text-xl">App Store</span>
+                    </span>
+                </button>
+
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer class="bg-gradient-to-r from-indigo-700 via-purple-700 to-pink-700">
+        <div class="container mx-auto px-5 py-8 flex items-center">
+            <div class="w-full flex justify-center gap-10">
+                <a href=""
+                   class="text-white cursor-pointer">
+                    <i class="fa-brands fa-facebook-f text-2xl"></i>
+                </a>
+
+                <a href=""
+                   class="text-white cursor-pointer">
+                    <i class="fa-brands fa-twitter text-2xl"></i>
+                </a>
+
+                <a href=""
+                   class="text-white cursor-pointer">
+                    <i class="fa-brands fa-instagram text-2xl"></i>
+                </a>
+
+                <a href=""
+                   class="text-white cursor-pointer">
+                    <i class="fa-brands fa-linkedin-in text-2xl"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+    <script src="./dist/main.js"> </script>
 </body>
 
 </html>
